# python-typemap

./: .gitignore  README.md  design-qs.rst  pep.rst  pre-pep.rst  pyproject.toml  spec-draft.rst  vercel.json
.github/workflows/: ci.yml
scripts/: build-peps.sh  py2rst.py  rst_replace_section.py  update-examples.sh  update-mypy-pin
tests/: _annos.py  decompile_annos.py  dump_annos.py  format_helper.py  test_astlike_1.py  test_attrs_type_checking.py  test_call.py  test_cqa.py  test_dataclass_like.py  test_eval_call_with_types.py  test_eval_call_with_types_signature.py  test_fastapilike_1.py  test_fastapilike_2.py  test_model_like.py  test_mypy_proto.py  test_nplike.py  test_qblike.py  test_qblike_2.py  test_qblike_3.py  test_schemalike.py  test_ts_utility.py  test_type_dir.py  test_type_eval.py  test_ziplike.py
typemap/: typing.py
typemap/type_eval/: __init__.py  _apply_generic.py  _decompile.py  _eval_call.py  _eval_operators.py  _eval_typing.py  _special_form.py  _subsim.py  _subtype.py  _tmatch.py  _typing_inspect.py  _wrapped_value.py  format_helper.py
typemap_extensions/: __init__.py  __init__.pyi
