[project]
name = "typemap"
version = "0.1.0"
description = "Computed types for Python"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.setuptools.packages.find]
include = ["typemap", "typemap.*", "typemap_extensions"]

[dependency-groups]
test = [
    "pytest>=7.0",
    "ruff",
    "mypy @ git+https://github.com/msullivan/mypy-typemap@9744d25fbd2a42ddb8b0cc6e5a74388e08c9ea7b",
]

[tool.uv]
required-version = ">=0.8.0"
default-groups = ["test"]
package = true

[tool.pytest.ini_options]
addopts = [
    "--capture=no",
]

[tool.ruff.lint]
preview = true
extend-select = [
    # "ASYNC",  # flake8-async
    "B", # flake8-bugbear
    # "C4",     # flake8-comprehensions
    # "C9",     # mccabe
    # "COM",    # flake8-commas
    # "D",      # pycodestyle
    # "DTZ",    # flake8-datetimez
    "E", # error
    # "ERA",    # flake8-eradicate
    "F", # pyflakes
    # "FBT",    # flake8-boolean-trap
    "G", # flake8-logging-format
    # "I",      # isort
    # "N",      # pep8-naming
    # "PGH",    # pygrep-hooks
    # "PIE",    # flake8-pie
    # "RUF",    # ruff specific
    # "SIM",    # flake8-simplify
    # "T20",    # flake8-print
    # "TC",       # flake8-type-checking
    # "UP",       # pyupgrade
    "W",        # warning
]
extend-ignore = [
    "B018", # useless-expression
    "B023", # function-uses-loop-variable
    "B904", # raise-without-from-inside-except
    "E402", # module-import-not-at-top-of-file
    "E252", # missing-whitespace-around-parameter-equals
    "F541", # f-string-missing-placeholders
    "E731", # don't assign lambdas
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "B011",  # Do not assert False - OK in tests
    "E501",  # Line too long
]

[tool.ruff]
line-length = 80
indent-width = 4
include = ["pyproject.toml", "typemap/**/*.py", "typemap_extensions/**/*.py", "tests/**/*.py"]

[tool.ruff.format]
quote-style = "preserve"
